--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "mongodb": "^5.8.1",
     "mongoose": "^7.5.0",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
