--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "mongoose": "^7.5.0",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
+    "next-connect": "^1.0.0",
     "next-i18next": "^14.0.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "stripe": "^13.3.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
