--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/mongodb-adapter": "^1.0.0",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.15",
+    "bootstrap": "^5.3.1",
+    "botui": "^1.1.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "i18next": "^23.5.1",
@@ -23,6 +25,7 @@
     "next-i18next": "^14.0.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
