--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^1.0.0",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "botui": "^1.1.3",
     "eslint": "8.48.0",
