--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
     "@heroicons/react": "^1.0.6",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.5",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
@@ -30,7 +32,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
-    "stripe": "^13.3.0",
+    "stripe": "^13.6.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
   },
